--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,8 @@ header {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(112, 111, 109);
-    font-size: 14px;
+    font-size: 16px;
+    display: inline;
 }
 
 .read-time .icon{
@@ -328,9 +329,11 @@ header {
 }
 
 .date{
-    font-size:xx-small;
     color: rgb(112, 111, 109);
     font-family: Arial, Helvetica, sans-serif;
-    display: inline-block;
+    display: inline;
+    font-size: 15px;
+    margin-right: 5px;
 
 }
+
