--- a/styles.css
+++ b/styles.css
@@ -337,3 +337,15 @@ header {
 
 }
 
+.Blog-Post a {
+    font-size: 20px;
+    transition: color 0.3 ease; /*transistions*/
+    text-decoration: none;
+}
+
+/*change the color when hovering*/
+
+.Blog-Post a:hover {
+    color: #1B4965;
+}
+
